--- a/ActiveBox.html
+++ b/ActiveBox.html
@@ -15,7 +15,7 @@
 			
 			<div class="header__inner">
 				<div class="header__logo">
-					<span class="logo__color-blue">active</span>box
+					<a class="logo__link" href="#"><span class="logo__color-blue">active</span>box</a>
 				</div>
 
 				<nav class="nav">
@@ -43,12 +43,67 @@
 				<h2 class="intro__suptitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna
 				vel scelerisque nisl consectetur et.</h2>
 
-				<a class="btn intro" href="#">Find Out More</a>
+				<a class="btn intro-btn" href="#">Find Out More</a>
 
 			</div><!-- intro__inner -->
 
 		</div><!-- conteiner -->
 	</div><!-- intro -->
+
+	<section class="section">
+		<div class="conteiner">
+			
+			<div class="features">
+				<div class="features__inner">
+
+					<div class="features__item">
+						<img class="features__item_img" src="img/section__1/1.png">
+						<div class="features__title">Easily Customised</div>
+						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+					</div><!-- features__item -->
+
+					<div class="features__item">
+						<img class="features__item_img" src="img/section__1/2.png">
+						<div class="features__title">Responsive Ready</div>
+						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+					</div><!-- features__item -->
+
+					<div class="features__item">
+						<img class="features__item_img" src="img/section__1/3.png">
+						<div class="features__title">Modern Design</div>
+						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+					</div><!-- features__item -->
+
+					<div class="features__item features__item_padding-none">
+						<img class="features__item_img" src="img/section__1/4.png">
+						<div class="features__title">Clean Code</div>
+						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+					</div><!-- features__item -->
+
+					<div class="features__item features__item_padding-none">
+						<img class="features__item_img" src="img/section__1/5.png">
+						<div class="features__title">Ready to Ship</div>
+						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+					</div><!-- features__item -->
+
+					<div class="features__item features__item_padding-none">
+						<img class="features__item_img" src="img/section__1/6.png">
+						<div class="features__title">Download for Free</div>
+						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+					</div><!-- features__item -->
+
+				</div><!-- features__inner -->
+
+				<!-- <div class="features__inner">
+					<div class="features__item"></div>
+					<div class="features__item"></div>
+					<div class="features__item"></div>
+				</div> -->
+
+			</div><!-- features -->
+
+		</div><!-- conteiner -->
+	</section><!-- section -->
 
 
 
