--- a/ActiveBox.html
+++ b/ActiveBox.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/d1839d5a68.js" crossorigin="anonymous"></script>
 	<title>ActiveBox</title>
 </head>
 <body>
-
+<!-- Header -->
 	<header class="header">
 		<div class="conteiner">
 			
@@ -33,6 +34,7 @@
 		</div><!-- conteiner -->
 	</header><!-- header -->
 
+<!-- Intro -->
 	<div class="intro">
 		<div class="conteiner">
 
@@ -50,12 +52,12 @@
 		</div><!-- conteiner -->
 	</div><!-- intro -->
 
+<!-- Features -->
 	<section class="section">
 		<div class="conteiner">
 			
 			<div class="features">
 				<div class="features__inner">
-
 					<div class="features__item">
 						<img class="features__item_img" src="img/section__1/1.png">
 						<div class="features__title">Easily Customised</div>
@@ -91,19 +93,239 @@
 						<div class="features__title">Download for Free</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
 					</div><!-- features__item -->
-
 				</div><!-- features__inner -->
-
-				<!-- <div class="features__inner">
-					<div class="features__item"></div>
-					<div class="features__item"></div>
-					<div class="features__item"></div>
-				</div> -->
-
 			</div><!-- features -->
 
 		</div><!-- conteiner -->
 	</section><!-- section -->
+
+<!-- Projects -->
+	
+	<div class="projects">
+		<div class="projects__item">
+
+				
+					<img class="projects-img" src="img/works/1.jpg" alt="1">
+				
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/2_03.jpg" alt="2">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+			<div class="projects__inner">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/ActiveBox_03.jpg" alt="1">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+			</div><!-- projects__inner -->
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+			<div class="projects__inner">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/ActiveBox_08.jpg" alt="1">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+			</div><!-- projects__inner -->
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+			<div class="projects__inner">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/ActiveBox_13.jpg" alt="1">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+			</div><!-- projects__inner -->
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+			<div class="projects__inner">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/ActiveBox_14.jpg" alt="1">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+			</div><!-- projects__inner -->
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+			<div class="projects__inner">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/ActiveBox_15.jpg" alt="1">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+			</div><!-- projects__inner -->
+		</div><!-- projects__item -->
+
+		<div class="projects__item">
+			<div class="projects__inner">
+
+				<div class="projects__image">
+					<img class="projects-img" src="img/works/ActiveBox_16.jpg" alt="1">
+				</div>
+			
+				<div class="projects__content">
+					<div class="projects__title">Project Name</div>
+					<div class="projects__suptitle">User Interface Design</div>
+				</div>
+
+			</div><!-- projects__inner -->
+		</div><!-- projects__item -->
+
+	</div><!-- projects -->
+
+	<!-- Team -->
+
+	<section class="section">
+		<div class="conteiner">
+			
+			<div class="team">
+				<div class="team__item">
+					<img class="team-img" src="img/Team/ActiveBox_035.jpg" alt="1">
+
+					<div class="team__name">Ruth Woods</div>
+					<div class="team__post">Founder, CEO</div>
+					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+
+					<div class="social">
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-facebook-f"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-twitter"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-linkedin"></i></a>
+						</div>
+
+					</div><!-- social -->
+				</div><!-- team__item -->
+
+				<div class="team__item">
+					<img class="team-img" src="img/Team/ActiveBox_03.jpg" alt="2">
+
+					<div class="team__name">Ruth Woods</div>
+					<div class="team__post">Founder, CEO</div>
+					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+
+					<div class="social">
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-facebook-f"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-twitter"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-linkedin"></i></a>
+						</div>
+
+					</div><!-- social -->
+				</div><!-- team__item -->
+
+				<div class="team__item">
+					<img class="team-img" src="img/Team/ActiveBox_04_03.jpg" alt="1">
+
+					<div class="team__name">Ruth Woods</div>
+					<div class="team__post">Founder, CEO</div>
+					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+
+					<div class="social">
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-facebook-f"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-twitter"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-linkedin"></i></a>
+						</div>
+
+					</div><!-- social -->
+				</div><!-- team__item -->
+
+				<div class="team__item">
+					<img class="team-img" src="img/Team/ActiveBox_013.jpg" alt="1">
+
+					<div class="team__name">Ruth Woods</div>
+					<div class="team__post">Founder, CEO</div>
+					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+
+					<div class="social">
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-facebook-f"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-twitter"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-linkedin"></i></a>
+						</div>
+
+					</div><!-- social -->
+				</div><!-- team__item -->
+			</div><!-- team -->
+
+		</div><!-- conteiner -->
+
+	</section>
 
 
 
