--- a/ActiveBox.html
+++ b/ActiveBox.html
@@ -323,26 +323,103 @@
 				</div><!-- team__item -->
 			</div><!-- team -->
 
-		</div><!-- conteiner -->
-
+		</div><!-- conteiner -->	
 	</section>
 
 
+	<section class="section section__review-full">
+		<div class="reviews">
+			<div class="reviews__image">
+				<img class="reviews__photo" src="img/reviews/Layer 19.jpg" alt="">
+			</div>
+
+			<div class="reviews__item">
+				<div class="reviews__content">
+					<div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
+
+					<div class="reviews__post">Susan Sims, Interaction Designer at XYZ</div>
+				</div><!-- reviews__content -->
+			</div><!-- reviews__item -->
+
+		</div><!-- reviews -->
+	</section><!-- section -->
+
+	<section class="section section-download">
+		<div class="conteiner">
+			
+			<div class="download">
+
+				<div class="download__item">
+					<div class="download__title">Are You Ready to Start? Download Now For Free!</div>
+				</div>
+
+				<div class="download__text">Fusce dapibus, tellus ac cursus commodo</div>
+
+				<button class="btn btn-download" type="button">Download Here</button>
+
+			</div><!-- download -->
+
+		</div><!-- conteiner -->
+	</section><!-- /section -->
+
+	<footer class="footer">
+		<div class="conteiner">
+			<div class="footer__inner">
+
+				<div class="footer__item">
+					<div class="footer__location">
+						<div class="footer__title">Location</div>
+						<div class="footer__text">3481 Melrose Place<br>
+						Beverly Hills, CA 90210</div>
+					</div>
+				</div><!-- footer__item -->
+
+				<div class="footer__item">
+					<div class="footer__title">Share with Love</div>
+
+					<div class="social social-footer">
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-facebook-f"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-twitter"></i></a>
+						</div>
+
+						<div class="social__item">
+							<a class="social-link" href=""><i class="fab fa-linkedin"></i></a>
+						</div>
+
+					</div><!-- social -->
+
+				</div><!-- team__item -->
+
+				<div class="footer__item">
+					<div class="footer__content">
+						<div class="footer__title">About ActiveBox</div>
+						<div class="footer__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</div>
+					</div>
+				</div><!-- footer__item -->
+
+			</div><!-- footer__inner -->
 
 
+		</div><!-- copyright__inner -->
 
+		<div class="copyright">
 
+			<div class="copyright__inner">
 
+				<div class="copyright__title">Copyright © 2015 ActiveBox. All Rights Reserved</div>
+				<div class="copyright__text">Made with
+					<i class="fas fa-heart"></i>
+					<span><a class="copyright-link" href="">by Kamal Chaneman</a></span>
+				</div>
+			</div><!-- copyright -->
 
-
-
-
-
-
-
-
-
-
+		</div><!-- conteiner -->
+</footer>
 
 
 
