--- a/ActiveBox.html
+++ b/ActiveBox.html
@@ -59,37 +59,62 @@
 			<div class="features">
 				<div class="features__inner">
 					<div class="features__item">
-						<img class="features__item_img" src="img/section__1/1.png">
+
+						<div class="features__image">
+							<img class="features__item_img" src="img/section__1/1.png">
+						</div>
+						
 						<div class="features__title">Easily Customised</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
 					</div><!-- features__item -->
 
 					<div class="features__item">
-						<img class="features__item_img" src="img/section__1/2.png">
+
+						<div class="features__image">
+							<img class="features__item_img" src="img/section__1/2.png">
+						</div>
+
 						<div class="features__title">Responsive Ready</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+
 					</div><!-- features__item -->
 
 					<div class="features__item">
-						<img class="features__item_img" src="img/section__1/3.png">
+
+						<div class="features__image">
+							<img class="features__item_img" src="img/section__1/3.png">
+						</div>
+
 						<div class="features__title">Modern Design</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
 					</div><!-- features__item -->
 
 					<div class="features__item features__item_padding-none">
-						<img class="features__item_img" src="img/section__1/4.png">
+
+						<div class="features__image">
+							<img class="features__item_img" src="img/section__1/4.png">
+						</div>
+
 						<div class="features__title">Clean Code</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
 					</div><!-- features__item -->
 
 					<div class="features__item features__item_padding-none">
-						<img class="features__item_img" src="img/section__1/5.png">
+
+						<div class="features__image">
+							<img class="features__item_img" src="img/section__1/5.png">
+						</div>
+
 						<div class="features__title">Ready to Ship</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
 					</div><!-- features__item -->
 
 					<div class="features__item features__item_padding-none">
-						<img class="features__item_img" src="img/section__1/6.png">
+
+						<div class="features__image">
+							<img class="features__item_img" src="img/section__1/6.png">
+						</div>
+
 						<div class="features__title">Download for Free</div>
 						<div class="features__content">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
 					</div><!-- features__item -->
@@ -220,7 +245,7 @@
 
 	</div><!-- projects -->
 
-	<!-- Team -->
+<!-- Team -->
 
 	<section class="section">
 		<div class="conteiner">
@@ -229,9 +254,12 @@
 				<div class="team__item">
 					<img class="team-img" src="img/Team/ActiveBox_035.jpg" alt="1">
 
-					<div class="team__name">Ruth Woods</div>
-					<div class="team__post">Founder, CEO</div>
-					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					<div class="team__content">
+						<div class="team__name">Ruth Woods</div>
+						<div class="team__post">Founder, CEO</div>
+						<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					</div><!-- team__content -->
+					
 
 					<div class="social">
 
@@ -253,9 +281,11 @@
 				<div class="team__item">
 					<img class="team-img" src="img/Team/ActiveBox_03.jpg" alt="2">
 
-					<div class="team__name">Ruth Woods</div>
-					<div class="team__post">Founder, CEO</div>
-					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					<div class="team__content">
+						<div class="team__name">Ruth Woods</div>
+						<div class="team__post">Founder, CEO</div>
+						<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					</div>
 
 					<div class="social">
 
@@ -277,9 +307,11 @@
 				<div class="team__item">
 					<img class="team-img" src="img/Team/ActiveBox_04_03.jpg" alt="1">
 
-					<div class="team__name">Ruth Woods</div>
-					<div class="team__post">Founder, CEO</div>
-					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					<div class="team__content">
+						<div class="team__name">Ruth Woods</div>
+						<div class="team__post">Founder, CEO</div>
+						<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					</div>
 
 					<div class="social">
 
@@ -301,9 +333,11 @@
 				<div class="team__item">
 					<img class="team-img" src="img/Team/ActiveBox_013.jpg" alt="1">
 
-					<div class="team__name">Ruth Woods</div>
-					<div class="team__post">Founder, CEO</div>
-					<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					<div class="team__content">
+						<div class="team__name">Ruth Woods</div>
+						<div class="team__post">Founder, CEO</div>
+						<div class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
+					</div>
 
 					<div class="social">
 
@@ -329,20 +363,25 @@
 
 	<section class="section section__review-full">
 		<div class="reviews">
-			<div class="reviews__image">
-				<img class="reviews__photo" src="img/reviews/Layer 19.jpg" alt="">
-			</div>
+
+			<div class="reviews__item">
+				<div class="reviews__image">
+					<img class="reviews__photo" src="img/reviews/Layer 19.jpg" alt="">
+				</div>
+			</div><!-- reviews__item -->
+			
 
 			<div class="reviews__item">
 				<div class="reviews__content">
 					<div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
 
 					<div class="reviews__post">Susan Sims, Interaction Designer at XYZ</div>
-				</div><!-- reviews__content -->
-			</div><!-- reviews__item -->
 
-		</div><!-- reviews -->
-	</section><!-- section -->
+				</div> <!-- reviews__content -->
+			</div> <!-- reviews__item -->
+
+		</div> <!-- reviews -->
+	</section> <!-- section -->
 
 	<section class="section section-download">
 		<div class="conteiner">
@@ -369,8 +408,8 @@
 				<div class="footer__item">
 					<div class="footer__location">
 						<div class="footer__title">Location</div>
-						<div class="footer__text">3481 Melrose Place<br>
-						Beverly Hills, CA 90210</div>
+						<div class="footer__text"><a class="footer-link" href="https://goo.gl/maps/JqykHouYBSMnA3JS9" target="_blank">3481 Melrose Place<br>
+						Beverly Hills, CA 90210</a></div>
 					</div>
 				</div><!-- footer__item -->
 
@@ -420,8 +459,6 @@
 
 		</div><!-- conteiner -->
 </footer>
-
-
 
 </body>
 </html>
