--- a/ActiveBox.html
+++ b/ActiveBox.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Описание страницы">
+	<meta name="keywords" content="Ключевые слова для поиска">
+<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="img/Favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/Favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/Favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/Favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/Favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway&display=swap" rel="stylesheet">
@@ -17,7 +28,7 @@
 		<div class="conteiner">
 			
 			<div class="header__inner">
-				<div class="header__logo">
+				<div class="header__logo" data-scroll="#intro">
 					<a class="logo__link" href="#"><span class="logo__color-blue">active</span>box</a>
 				</div>
 
